--- a/src/backend/src/Services/Accounting/Accounting.Infrastructure/Accounting.Infrastructure.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Infrastructure/Accounting.Infrastructure.csproj
@@ -10,4 +10,8 @@
         <ProjectReference Include="..\Accounting.Application\Accounting.Application.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="9.0.4" />
+    </ItemGroup>
+
 </Project>
