--- a/src/backend/src/Services/Accounting/Accounting.Infrastructure/Accounting.Infrastructure.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Infrastructure/Accounting.Infrastructure.csproj
@@ -11,7 +11,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="9.0.4" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.7">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="9.0.4"/>
     </ItemGroup>
 
 </Project>
