--- a/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
+++ b/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DatabaseConfig": {
+    "server": "localhost",
+    "Port": "5433",
+    "Database": "AccountingDb"
   }
 }
