--- a/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
+++ b/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
@@ -5,9 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5432;Database=Accountingdb;User Id=postgres;Password=postgres;Include Error Detail=true"
+  },
   "DatabaseConfig": {
     "server": "localhost",
-    "Port": "5433",
+    "Port": "5432",
     "Database": "AccountingDb"
   }
 }
