--- a/src/backend/src/Services/Accounting/Accounting.Infrastructure/Accounting.Infrastructure.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Infrastructure/Accounting.Infrastructure.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="9.0.4"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <Folder Include="Data\Migrations\"/>
+    </ItemGroup>
+
 </Project>
