Adding DTOs files in Application Project

--- a/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
+++ b/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
@@ -7,10 +7,10 @@
   },
   "ConnectionStrings": {
     "Database": "Server=localhost;Port=5432;Database=Accountingdb;User Id=postgres;Password=postgres;Include Error Detail=true"
-  },
-  "DatabaseConfig": {
-    "server": "localhost",
-    "Port": "5432",
-    "Database": "AccountingDb"
   }
+  //"DatabaseConfig": {
+  //  "server": "localhost",
+  //  "Port": "5432",
+  //  "Database": "AccountingDb"
+  //}
 }
