--- a/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Accounting\Accounts\Commands\DeleteAccount\"/>
         <Folder Include="Accounting\Accounts\Queries\"/>
         <Folder Include="Accounting\DocumentReferences\Commands\"/>
         <Folder Include="Accounting\DocumentReferences\Queries\"/>
@@ -22,7 +23,6 @@
         <Folder Include="Accounting\AuditLogs\Queries\"/>
         <Folder Include="Accounting\Periods\Commands\"/>
         <Folder Include="Accounting\Periods\Queries\"/>
-        <Folder Include="Exceptions\"/>
     </ItemGroup>
 
     <ItemGroup>
