--- a/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
@@ -12,7 +12,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Accounting\Accounts\Queries\"/>
+        <Folder Include="Accounting\Accounts\Queries\GetAccountsByType\" />
+        <Folder Include="Accounting\Accounts\Queries\GetAccountsTree\" />
+        <Folder Include="Accounting\Accounts\Queries\GetAccounts\" />
         <Folder Include="Accounting\DocumentReferences\Commands\"/>
         <Folder Include="Accounting\DocumentReferences\Queries\"/>
         <Folder Include="Accounting\JournalEntries\Commands\"/>
