--- a/src/backend/src/tests/Axenta.Tests/Axenta.Tests.csproj
+++ b/src/backend/src/tests/Axenta.Tests/Axenta.Tests.csproj
@@ -8,10 +8,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
-        <PackageReference Include="xunit" Version="2.9.2"/>
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.4">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1"/>
+        <PackageReference Include="xunit" Version="2.9.3"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Moq" Version="4.20.72"/>
+        <PackageReference Include="FluentAssertions" Version="8.5.0"/>
     </ItemGroup>
 
     <ItemGroup>
@@ -19,7 +27,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Application\" />
+        <ProjectReference Include="..\..\Services\Accounting\Accounting.Application\Accounting.Application.csproj"/>
+        <ProjectReference Include="..\..\Services\Accounting\Accounting.Domain\Accounting.Domain.csproj"/>
     </ItemGroup>
 
 </Project>
