Develop Queries and Handlers Company

--- a/src/backend/src/Services/Accounting/Accounting.API/Accounting.API.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.API/Accounting.API.csproj
@@ -32,4 +32,8 @@
         <ProjectReference Include="..\Accounting.Infrastructure\Accounting.Infrastructure.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Endpoints\Company\" />
+    </ItemGroup>
+
 </Project>
