--- a/src/backend/src/Services/Reports/Axenta.Reports.API/appsettings.Development.json
+++ b/src/backend/src/Services/Reports/Axenta.Reports.API/appsettings.Development.json
@@ -4,5 +4,74 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DatabaseConfig": {
+    "server": "127.0.0.1",
+    "Port": "5432",
+    "Database": "Accountingdb"
+  },
+  "ConsulConfig": {
+    "ServiceId": "68612182-0938-11F0-8765-13748234574D",
+    "ServiceName": "member-api",
+    "ServiceAddress": "127.0.0.1",
+    "ServicePort": 5050,
+    "HealthCheckUrl": "https://127.0.0.1:5050/health",
+    "ConsulHost": "http://localhost:8500"
+  },
+  "GraylogConfig": {
+    "Host": "127.0.0.1",
+    "Port": 12201,
+    "ApplicationName": "membership-api",
+    "UseUdp": true
+  },
+  "Otel": {
+    "Endpoint": "otel-collector:4317"
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File",
+      "Serilog.Sinks.EventLog"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      // Cambia esto por "Warning", "Error", etc. según lo que quieras
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log-.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "EventLog",
+        "Args": {
+          "source": "NombreDeTuAplicacion",
+          // Este es el nombre que aparecerá en el Visor de eventos
+          "restrictedToMinimumLevel": "Warning"
+          // Por ejemplo, solo guardar warnings y errores en eventos
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "MiApiConSerilog"
+    }
   }
 }
+
+
