Develop GetBalanceSheet Query and Handler

--- a/src/backend/src/Services/Reports/Reports.API/Reports.API.csproj
+++ b/src/backend/src/Services/Reports/Reports.API/Reports.API.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <AssemblyName>Reports.API</AssemblyName>
+        <RootNamespace>Reports.API</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,7 +15,6 @@
         <PackageReference Include="Carter" Version="8.0.0"/>
         <PackageReference Include="Dapper" Version="2.1.66"/>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.3"/>
-        <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1"/>
         <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
         <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0"/>
         <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0"/>
