Develop GetGeneralLedger Query and Handlers

--- a/src/backend/src/Services/Reports/Reports.API/appsettings.json
+++ b/src/backend/src/Services/Reports/Reports.API/appsettings.json
@@ -57,8 +57,10 @@
       {
         "Name": "EventLog",
         "Args": {
-          "source": "NombreDeTuAplicacion",          // Este es el nombre que aparecerá en el Visor de eventos
-          "restrictedToMinimumLevel": "Warning"      // Por ejemplo, solo guardar warnings y errores en eventos
+          "source": "NombreDeTuAplicacion",
+          // Este es el nombre que aparecerá en el Visor de eventos
+          "restrictedToMinimumLevel": "Warning"
+          // Por ejemplo, solo guardar warnings y errores en eventos
         }
       }
     ],
