--- a/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
+++ b/src/backend/src/Services/Accounting/Accounting.API/appsettings.Development.json
@@ -7,6 +7,14 @@
   },
   "ConnectionStrings": {
     "Database": "Server=localhost;Port=5432;Database=Accountingdb;User Id=postgres;Password=postgres;Include Error Detail=true"
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "FeatureManagement": {
+    "OrderFullfilment": false
   }
   //"DatabaseConfig": {
   //  "server": "localhost",
