--- a/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
         <Folder Include="Accounting\JournalEntries\EventHandlers\Integration\"/>
+        <Folder Include="Common\Repositories\"/>
     </ItemGroup>
 
     <ItemGroup>
