Developed event integration for periods reopening

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,14 @@
   accountingdb:
     image: postgres:latest
 
-# accounting.api:
-#   image: accounting.api
-#   build:
-#     context: .
-#     dockerfile: src/backend/src/Services/Accounting/Accounting.API/Dockerfile
+  messagebroker:
+    image: rabbitmq:management
+  
+ #accounting.api:
+ #  image: accounting.api
+ #  build:
+ #    context: .
+ #    dockerfile: src/backend/src/Services/Accounting/Accounting.API/Dockerfile
 
 volumes:
   postgres_axenta:
