--- a/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
+++ b/src/backend/src/Services/Accounting/Accounting.Application/Accounting.Application.csproj
@@ -13,12 +13,22 @@
     </ItemGroup>
 
     <ItemGroup>
+        <Folder Include="Accounting\CostCenters\Commands\ActiveCostCenter\"/>
+        <Folder Include="Accounting\CostCenters\Commands\DesactivateCostCenter\"/>
+        <Folder Include="Accounting\CostCenters\Commands\UpdateCostCenter\"/>
+        <Folder Include="Accounting\CostCenters\Queries\GetCostCenterById\"/>
+        <Folder Include="Accounting\CostCenters\Queries\GetCostCenters\"/>
+        <Folder Include="Accounting\CostCenters\Queries\GetCostCentersTree\"/>
         <Folder Include="Accounting\JournalEntries\EventHandlers\Integration\"/>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.7"/>
         <PackageReference Include="Microsoft.FeatureManagement.AspNetCore" Version="4.1.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Remove="Accounting\CostCenters\Commands\CreateCostCenter\CreateCostCenterHandler.cs"/>
     </ItemGroup>
 
 </Project>
