Domain events and integration for notification

--- a/src/backend/src/Services/Reports/Reports.API/appsettings.Development.json
+++ b/src/backend/src/Services/Reports/Reports.API/appsettings.Development.json
@@ -10,6 +10,16 @@
     "Port": "5432",
     "Database": "Accountingdb"
   },
+  "MailSettings": {
+    "DisplayName": "Soporte Técnico",
+    "From": "soporte@tuempresa.com",
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "soporte@tuempresa.com",
+    "Password": "USE_USER_SECRETS_O_KEYVAULT",
+    "EnableSSL": true,
+    "templatePath": "EmailTemplates"
+  },
   "ConsulConfig": {
     "ServiceId": "68612182-0938-11F0-8765-13748234574D",
     "ServiceName": "member-api",
