develop worker service for sending notifications

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,12 @@
   messagebroker:
     image: rabbitmq:management
   
+  axenta.notifications:
+    image: axenta.notifications
+    build:
+      context: .
+      dockerfile: src/backend/src/Services/Notifications/Axenta.Notifications/Dockerfile
+  
   #accounting.api:
   #  image: accounting.api
   #  build:
@@ -12,4 +18,5 @@
   #    dockerfile: src/backend/src/Services/Accounting/Accounting.API/Dockerfile
 
 volumes:
-  postgres_axenta:
+  postgres_axenta: 
+
