--- a/src/backend/src/Services/Notifications/Axenta.Notifications/appsettings.json
+++ b/src/backend/src/Services/Notifications/Axenta.Notifications/appsettings.json
@@ -16,7 +16,8 @@
     "Host": "sandbox.smtp.mailtrap.io",
     "Port": 2525,
     "UserName": "e4d8b554a9ac2c",
-    "Password": "13d48767cfe6c1",    // USE_USER_SECRETS_O_KEYVAULT
+    "Password": "13d48767cfe6c1",
+    // USE_USER_SECRETS_O_KEYVAULT
     "UseStartTls": true
   },
   "Serilog": {
